<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.host.HostActivity">

    <View
        android:id="@+id/hostView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/hostbackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_hostStartScene"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_btn_primary"
        android:fontFamily="@font/glorybold"
        android:text="START"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="235dp"
        app:layout_constraintTop_toTopOf="@+id/hostView" />

    <TextView
        android:id="@+id/selectedScene_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/gloryregular"
        android:text="Shine"
        android:textColor="@color/white"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_hostStartScene"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hostView" />

    <Button
        android:id="@+id/btn_hostSelectScene"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_background_client_button"
        android:fontFamily="@font/gloryextralight"
        android:text="select scene"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/hostView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_hostStartScene" />

    <Button
        android:id="@+id/btn_hostEndSession"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_background_client_button"
        android:fontFamily="@font/gloryextralight"
        android:text="end session"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="635dp"
        app:layout_constraintTop_toTopOf="@+id/hostView"  />


</androidx.constraintlayout.widget.ConstraintLayout>