<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.scene.SceneActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_scenes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/scene_row"
        android:padding="@dimen/big_padding"
        android:background="@drawable/bg_scene"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_addNewScene"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/white"
        android:src="@drawable/ic_baseline_add_24"/>

</androidx.constraintlayout.widget.ConstraintLayout>